; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonhashrhash.c_sha256_subhash.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonhashrhash.c_sha256_subhash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sha256_ctx = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sha256_ctx*, i32*)* @sha256_subhash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sha256_subhash(%struct.sha256_ctx* %0, i32* %1) #0 {
  %3 = alloca %struct.sha256_ctx*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.sha256_ctx* %0, %struct.sha256_ctx** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %21, %2
  %7 = load i32, i32* %5, align 4
  %8 = icmp ult i32 %7, 8
  br i1 %8, label %9, label %24

9:                                                ; preds = %6
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds i32, i32* %10, i32 1
  store i32* %11, i32** %4, align 8
  %12 = ptrtoint i32* %10 to i32
  %13 = load %struct.sha256_ctx*, %struct.sha256_ctx** %3, align 8
  %14 = getelementptr inbounds %struct.sha256_ctx, %struct.sha256_ctx* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @store32be(i32 %12, i32 %19)
  br label %21

21:                                               ; preds = %9
  %22 = load i32, i32* %5, align 4
  %23 = add i32 %22, 1
  store i32 %23, i32* %5, align 4
  br label %6

24:                                               ; preds = %6
  ret void
}

declare dso_local i32 @store32be(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
